enable java vector api